Shortened metric/imperial to C/F in toolbar. Hid feelsLike text when too narrow to avoid elements to become not lined up.

--- a/css/mediaQueries.css
+++ b/css/mediaQueries.css
@@ -1,7 +1,8 @@
 @media (max-width: 576px) {
   .precHeading,
   .windHeading,
-  .gust {
+  .gust,
+  .feelsLike {
     display: none;
   }
 }
